objects/Car_Notification__c.object
<CustomObject>
    <description>This is a table of notification criteria so that we can send users an email about new cars that match their criteria.</description>
    <fields>
        <fullName>Body_Style__c</fullName>
        <label>Body Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canceled_At__c</fullName>
        <description>If this field has a value in it then the notification is considered disabled.</description>
        <label>Canceled At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_At__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Created At</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Mileage__c</fullName>
        <label>Maximum Mileage</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Price__c</fullName>
        <defaultValue>1000000</defaultValue>
        <label>Maximum Price</label>
        <precision>7</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Price</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The region short code, e.g. &quot;sf&quot; or &quot;la&quot;</description>
        <label>Region</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <label>Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Car Notification</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>